# spotify-dl

./: .gitignore  .gitmodules  README.md  compile_protobuf  key.wvd.enc  main.py  pyproject.toml  requirements.txt  script.py
binaries/: mp4decrypt
spotify_dl/: TODO  cli.py  downloader.py  format.py  key_provider.py  metadata.py  state.py  stream.py  track.py
spotify_dl/api/internal/: cipher.py  mercury.py  packet.py  playplay.py  spotify_client.py  totp.py  widevine.py
spotify_dl/api/internal/proto/: authentication_pb2.py  authentication_pb2.pyi  connectivity_pb2.py  connectivity_pb2.pyi  entity_extension_data_pb2.py  entity_extension_data_pb2.pyi  extended_metadata_pb2.py  extended_metadata_pb2.pyi  extension_kind_pb2.py  extension_kind_pb2.pyi  keyexchange_pb2.py  keyexchange_pb2.pyi  mercury_pb2.py  mercury_pb2.pyi  metadata_pb2.py  metadata_pb2.pyi  (+2 more)
spotify_dl/api/musicbrainz/: TODO  cover.py  mbid.py
spotify_dl/api/web/: apresolve.py  storage_resolve.py
spotify_dl/auth/: __init__.py  auth_provider.py  clienttoken.py  internal_auth.py  login5.py  protocol.py  spdc.py  web_auth.py
spotify_dl/model/: coverartarchive.py  getAlbum_gql.py  getTrack_gql.py  id3.py  internal.py  shared.py  web.py
spotify_dl/player/: manager.py
spotify_dl/player/backend/: base.py  mpv_backend.py
spotify_dl/playplay/: Makefile  playplay_c.py
spotify_dl/playplay/unplayplay/: decrypt_main.cc  main.h  process.cc
spotify_dl/utils/: bytes_stuff.py  connection.py  crypto.py  fifo.py  hashcash.py  interpolator.py  misc.py  sanitize_path.py  session.py  terminal.py  ytdl.py
(+17 files in other folders)
