[project]
name = "spotify-dl"
version = "0.1.0"
description = "Spotify Downloader"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.5",
    "curl-cffi>=0.14.0",
    "faker>=40.4.0",
    "flask>=3.1.3",
    "mutagen>=1.47.0",
    "pillow>=12.1.1",
    "protobuf>=6.33.5",
    "pycryptodomex>=3.23.0",
    "pyreadline3>=3.5.4",
    "pywidevine>=1.9.0",
    "wcwidth>=0.6.0",
    "yt-dlp>=2026.2.4",
]
